# vla-eval-harness

./: .gitignore  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
LICENSES/: Apache-2.0.txt
docs/: implementation-plan.md
docs/cookbook/: adapter-authoring.md
docs/internal/: README.md  implementation-plan.md  phase-1.5-fidelity.md  phase-2-runtime-spikes.md
docs/pain/: README.md  current-schema-observed-pain.md
docs/runbooks/: live-integration.md  phase-1.5-fidelity.md  phase-2-runtime-spikes.md
docs/spikes/: current-schema-gap-matrix.md  upstream-default-source-map.md
roboarena/: __init__.py  policy.py  policy_client.py  policy_server.py
roboarena/utils/: __init__.py
scripts/: __init__.py  fetch_droid_fixtures.py  run_episode.py  spike_gr00t_current_schema.py
scripts/backends/: README.md  __init__.py  dk1_bidk1.py  yam_robotenv.py
scripts/legacy/: README.md  fetch_droid_fixtures.py  serve_openpi_for_fidelity.py  spike_molmoact2_current_schema.py
tests/fidelity/: test_openpi_action_negative_control.py  test_openpi_action_parity.py  test_openpi_preprocessing_parity.py
tests/hardware/: test_dk1_bounded_motion.py  test_dk1_dry_run.py
tests/legacy/: test_current_schema_bridge.py  test_current_schema_runner.py  test_dk1_active_arm.py  test_openpi_current_schema.py
tests/unit/: test_adapter_authoring_contract.py  test_bimanual_runner.py  test_current_schema_bridge.py  test_current_schema_runner.py  test_decision_log.py  test_dk1_active_arm.py  test_dk1_bimanual.py  test_gr00t.py  test_molmoact2_yam.py  test_openpi_aloha.py  test_openpi_current_schema.py  (+3 more)
vla_harness/: __init__.py
(+50 files in other folders)
