[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-eval-harness"
version = "0.1.0"
description = "Fair-inference evaluation harness for vision-language-action policies across robot embodiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgpack>=1.1.1",
    "numpy>=2.3.0",
    "typing-extensions>=4.14.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["roboarena*", "vla_harness*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "C4",
    "DTZ",
    "E4",
    "E7",
    "E9",
    "F",
    "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR1",
    "PLR5",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "UP",
    "W",
]
ignore = [
    "F722",   # Conflicts with array typing.
    "T201",   # We use print statements.
    "PD008",  # Lots of false positives.
    "ISC001", # Disabling to support ruff format.
]
unfixable = [
    "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
